--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   get: ^4.6.5
   provider: ^6.0.4
   http: ^0.13.5
+  google_fonts: ^3.0.1
+  google_sign_in: ^5.4.2
+  the_apple_sign_in: ^1.1.1
+  cloud_firestore: ^4.0.2
 
 dev_dependencies:
   flutter_test:
