--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   google_sign_in: ^5.4.2
   the_apple_sign_in: ^1.1.1
   cloud_firestore: ^4.0.2
+  # location: ^4.4.0
+  google_maps_flutter: ^2.2.1
+  geolocator: ^9.0.2
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
