--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.0.4
   http: ^0.13.5
   google_fonts: ^3.0.1
+  font_awesome_flutter: ^10.2.1
   google_sign_in: ^5.4.2
   the_apple_sign_in: ^1.1.1
   cloud_firestore: ^4.0.2
@@ -66,9 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
