--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   google_maps_flutter: ^2.2.1
   geolocator: ^9.0.2
   modal_bottom_sheet: ^2.1.2
+  location: ^4.4.0
+  url_launcher: ^6.1.6
+  flutter_polyline_points: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
