--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_maps_flutter: ^2.2.1
   geolocator: ^9.0.2
   modal_bottom_sheet: ^2.1.2
+  geocoding: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +73,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-
     - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
