--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   sliding_up_panel: ^2.0.0+1
   page_transition: ^2.0.9
+  rating_dialog: ^2.0.4
 
 
 
