--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,6 +20,11 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
@@ -53,26 +58,22 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName        
         multiDexEnabled true
-        // ndk {
-        // abiFilters 'x86', 'armeabi-v7a'
-        // }
+        
     }
-
+  signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
-//     splits {
-//         abi {
-//         enable true
-//         reset()
-//         include "x86", "x86_64", "armeabi", "armeabi-v7a", "arm64-v8a"
-//         universalApk false
-//         }
-//   }
+
 }
 
 flutter {
@@ -84,5 +85,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.8.0-beta01'
-    // implementation 'androidx.multidex:multidex:2.1.0'
+    implementation 'androidx.multidex:multidex:2.1.0'
 }
