--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.0.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.android.material:material:1.8.0-beta01'
-    implementation 'androidx.multidex:multidex:2.1.0'
+    // implementation 'com.google.android.material:material:1.8.0-beta01'
+    // implementation 'androidx.multidex:multidex:2.1.0'
 }
