--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
    <application
         android:label="taxischrono"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
-        android:extractNativeLibs=false
+        android:extractNativeLibs='false'
+        android:icon="@mipmap/ic_launcher">        
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyDRiuLYKs1ymgiW97p3ybAuQLOQcBDqUvg"/>
         <activity
